# TCO_Comparison_Model

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PRODUCTION_READINESS.md  README.md  config.py  docker-compose.yml  generate_sample_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tco_pipeline.py  streamlit_app.py
.github/: copilot-instructions.md
.github/instructions/: api-ops.instructions.md  documentation.instructions.md  execution-workflow.instructions.md  frontend-quality.instructions.md  security.instructions.md
.github/skills/plan-execute-verify/: SKILL.md
.github/skills/standards-review/: SKILL.md
.github/workflows/: ci.yml
analytics/: benchmarking.py  financial_translator.py  monte_carlo.py  optimization.py  scenario_engine.py  supplier_scorecard.py  tco_engine.py
api/: index.py  main.py
data_ingestion/: erp_connector.py  loader.py
database/: 01_schema.sql  02_views.sql
docs/: ROLLOUT_IMPLEMENTATION.md  SAAS_INVESTMENT_MEMO.md  SKILLS_IMPLEMENTATION.md  STANDARDS_IMPLEMENTATION.md  VERCEL_AWS_DEPLOYMENT.md
infra/aws/: README.md  appspec-overview.txt
pages/: 1_Executive_Dashboard.py  2_Category_Manager.py  3_Finance_CFO.py  4_Engineering.py
tests/: conftest.py  test_api.py  test_benchmarking.py  test_config.py  test_financial_translator.py  test_loader.py  test_monte_carlo.py  test_optimization.py  test_scenario_engine.py  test_supplier_scorecard.py  test_tco_engine.py
utils/: db.py  demo_data.py  logging_config.py  run_metadata.py
